--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,6 +4,11 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/home"
+            android:title="Home"
+            app:actionViewClass="android.widget.TextView"/>
+        <item
             android:id="@+id/nav_saved_articles"
             android:icon="@drawable/savedarticles"
             android:title="Saved Articles"
