--- a/app/src/main/res/layout/fragment_newsfeed.xml
+++ b/app/src/main/res/layout/fragment_newsfeed.xml
@@ -3,13 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.basimahmad.smartjournalism.NewsFeedFragment">
+    tools:context="com.example.basimahmad.smartjournalism.NewsFeedFragment"
+    android:descendantFocusability="blocksDescendants"
+    >
 
     <ListView
         android:id="@+id/list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:divider="@null"
-        android:paddingTop="10dp"/>
+        android:paddingTop="10dp"
+        />
 
 </RelativeLayout>
