--- a/app/src/main/res/layout/fragment_newsfeed.xml
+++ b/app/src/main/res/layout/fragment_newsfeed.xml
@@ -6,7 +6,10 @@
     tools:context="com.example.basimahmad.smartjournalism.NewsFeedFragment"
     android:descendantFocusability="blocksDescendants"
     >
-
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <ListView
         android:id="@+id/list"
         android:layout_width="fill_parent"
@@ -14,5 +17,6 @@
         android:divider="@null"
         android:paddingTop="10dp"
         />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
