--- a/app/src/main/res/layout/fragment_editprofile.xml
+++ b/app/src/main/res/layout/fragment_editprofile.xml
@@ -50,26 +50,25 @@
                     android:layout_height="match_parent">
 
                     <ImageView
-                        android:id="@+id/profile_img_back"
+                        android:id="@+id/edit_profile_img_back"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
-                        android:alpha=".3"
-                        android:background="@drawable/profile" />
+                         />
 
 
 
                     <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
-                        android:id="@+id/fab"
+                        android:id="@+id/edit_fab"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginEnd="18dp"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginEnd="5dp"
                         android:layout_marginRight="18dp"
                         android:src="@drawable/edit"
                         app:backgroundTint="@android:color/white"
@@ -89,14 +88,15 @@
                             android:text="Person Name"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            android:id="@+id/edit_name"/>
 
-                        <TextView
+                     <!--   <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="RawalPindi, Pakistan"
                             android:textColor="@android:color/black"/>
-
+-->
                     </LinearLayout>
 
                     <ImageButton
@@ -129,10 +129,35 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="User Settings"
+                    android:text="Update Info"
                     android:textStyle="bold"
                     android:textSize="20sp"
                     android:textColor="@color/colorAccent"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_marginTop="20dp">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:textColorHint="@color/colorAccent">
+                        <EditText android:id="@+id/edit_input_first_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="text"
+                            android:hint="First Name"
+                            android:textColor="@color/colorAccent"/>
+                    </android.support.design.widget.TextInputLayout>
+
+
+
+                </LinearLayout>
 
 
                 <LinearLayout
@@ -148,7 +173,32 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
                         android:textColorHint="@color/colorAccent">
-                        <EditText android:id="@+id/input_email"
+                        <EditText android:id="@+id/edit_input_last_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="text"
+                            android:hint="Last Name"
+                            android:textColor="@color/colorAccent"/>
+                    </android.support.design.widget.TextInputLayout>
+
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_marginTop="20dp">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:textColorHint="@color/colorAccent">
+                        <EditText android:id="@+id/edit_input_email"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="textEmailAddress"
@@ -161,30 +211,7 @@
                 </LinearLayout>
 
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center"
-                    android:layout_marginTop="20dp">
 
-                    <android.support.design.widget.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:textColorHint="@color/colorAccent">
-                        <EditText android:id="@+id/input_password"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="textPassword"
-                            android:hint="Password"
-                            android:textColor="@color/colorAccent"/>
-                    </android.support.design.widget.TextInputLayout>
-
-
-
-                </LinearLayout>
 
 
                 <LinearLayout
@@ -200,7 +227,7 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
                         android:textColorHint="@color/colorAccent">
-                        <EditText android:id="@+id/input_phone"
+                        <EditText android:id="@+id/edit_input_phone"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="text"
@@ -225,11 +252,36 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
                         android:textColorHint="@color/colorAccent">
-                        <EditText android:id="@+id/input_address"
+                        <EditText android:id="@+id/edit_input_address"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:hint="Address"
+                            android:textColor="@color/colorAccent"/>
+                    </android.support.design.widget.TextInputLayout>
+
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_marginTop="20dp">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:textColorHint="@color/colorAccent">
+                        <EditText android:id="@+id/input_bio"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="text"
+                            android:hint="Bio"
                             android:textColor="@color/colorAccent"/>
                     </android.support.design.widget.TextInputLayout>
 
