--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -23,9 +23,10 @@
                 android:layout_width="600dp"
                 android:layout_height="wrap_content"
                 android:text="Title"
-                android:textColor="@color/black"
-                android:textSize="40dp"
-                android:layout_alignParentStart="true"/>
+                android:textColor="@color/colorAccent"
+                android:textSize="30dp"
+                android:layout_alignParentStart="true"
+                />
 
             <ImageButton
                 android:id="@+id/bookmark_button"
@@ -45,7 +46,7 @@
             android:textColor="@color/gray"
             android:textSize="10dp"
             android:layout_marginTop="10dp"/>
-        <TextView
+        <!--<TextView
             android:id="@+id/news_timestampd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -53,7 +54,7 @@
             android:textColor="@color/gray"
             android:textSize="10dp"
             android:layout_marginTop="10dp"/>
-
+-->
         <TextView
             android:id="@+id/news_author"
             android:layout_width="match_parent"
