--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#ffffff"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
+    tools:context="com.example.basimahmad.smartjournalism.MainActivity">
+<ScrollView
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:fancy="http://schemas.android.com/apk/res-auto"
+    android:layout_weight="40"
     android:fitsSystemWindows="true">
 
     <LinearLayout
@@ -71,8 +80,8 @@
             android:layout_marginTop="20dp"/>
         <ImageView
             android:id="@+id/news_img1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="500dp"
+            android:layout_height="500dp"
             />
         <VideoView
             android:id="@+id/news_video1"
@@ -87,16 +96,27 @@
             android:layout_marginTop="20dp"/>
         <ImageView
             android:id="@+id/news_img2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="500dp"
+            android:layout_height="500dp"
             android:layout_marginBottom="30dp"/>
         <ImageView
             android:id="@+id/news_img3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-
-
+            android:layout_width="500dp"
+            android:layout_height="500dp" />
 
     </LinearLayout>
 </ScrollView>
+    <ListView
+        android:id="@+id/listViewComment"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" >
+    </ListView>
+    <include
+        layout="@layout/comment_area"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="bottom"
+        android:layout_marginTop="5dp"/>
+</LinearLayout>
