--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -18,7 +18,8 @@
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:src="@drawable/live"
-        android:paddingBottom="10dp"/>
+        android:paddingBottom="10dp"
+        android:visibility="gone"/>
    <!-- <ImageButton
         android:id="@+id/breaking"
         android:layout_width="match_parent"
