--- a/app/src/main/res/layout/message_area.xml
+++ b/app/src/main/res/layout/message_area.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
+    android:background="@color/black"
     android:gravity="bottom"
     android:orientation="horizontal">
 
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textColorHint="#CFD8DC"
-        android:textColor="#CFD8DC"
+        android:textColor="#fff"
         android:hint="Write a message..."
         android:id="@+id/messageArea"
         android:maxHeight="80dp"
