--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -17,7 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="95dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/dpholderwhit1" />
+        app:srcCompat="@drawable/dpholderwhit1"
+        />
 
     <TextView
         android:id="@+id/nav_user_name"
